Fixed view spacing, and pagination spacing

--- a/client/src/components/Card/card.module.scss
+++ b/client/src/components/Card/card.module.scss
@@ -128,8 +128,9 @@
   // background-image: linear-gradient(top ,rgb(29, 92, 95), rgb(19, 135, 141));
   // background-color: #296C70;
   // color: rgb(194, 188, 188);
-  margin: 20px;
-
+  // margin: 20px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 //other styles on the card for some reason???
